--- a/src/pages/Projects/Projects.css
+++ b/src/pages/Projects/Projects.css
@@ -35,11 +35,11 @@
     align-items: center;
     justify-content: flex-start;
 }
-.iconimg{
-    height: 30%;
-    width: 30%;
+.createnewimg {
+    height: 40%;
+    width: 35%;
 }
-.imgageplus{
+.imgageplus {
     height: 30%;
     width: 30%;
 }
@@ -63,9 +63,9 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #FFF;
+    background-color: #fff;
     border-radius: 10px;
-    border: 1px solid rgba(0, 0, 0, 0.80);
+    border: 1px solid rgba(0, 0, 0, 0.8);
 }
 .searchbar {
     padding-left: 20px;
@@ -116,7 +116,7 @@
     line-height: 14.114px; /* 44.107% */
     letter-spacing: -0.262px;
 }
-.para{
+.para {
     margin-top: 10px;
     color: #000;
     font-family: Poppins;
@@ -125,13 +125,13 @@
     font-weight: 400;
     line-height: normal;
 }
-.datein{
+.datein {
     width: 9rem;
     height: 2rem;
     flex-shrink: 0;
     border-radius: 4px;
     border: 1px solid #000;
-    background: rgba(217, 217, 217, 0.00);
+    background: rgba(217, 217, 217, 0);
 }
 
 .menu-handler {
