--- a/src/components/ProjectHeader/stickyHeader.css
+++ b/src/components/ProjectHeader/stickyHeader.css
@@ -5,22 +5,15 @@
     display: flex;
     height: 4rem;
     width: 100vw;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
-    gap: 84.31rem;
 }
 .project-title{
-    width: 14.75rem;
-    height: 2.75rem;
+    width: auto;
+    height: auto;
     display: inline-block;
 }
 .project-title>p{
-    /* font-family: Verdana, Geneva, Tahoma, sans-serif;
-    color: rgb(0,48,89);
-    height: 3rem;
-    font-size: 1.25rem;
-    display: flex;
-    align-items: center; */
     color: #003059;
     font-family: sans-serif;
     font-size: 36px;
@@ -30,20 +23,20 @@
 
 }
 .title-underline{
-    width: 114.25rem;
     height: 0.0625rem;
     background: #B8B6B6;
-    margin-left: 20px;
+   
 }
 .project-header-icons{
     display: inline-flex;
     align-items: flex-start;
     gap: 1.5rem;
+    margin-right: 100px;
 }
 .user-icons{
     display: flex;
-width: 3.125rem;
-height: 3.125rem;
+width: 2.5rem;
+height: 2.5rem;
 padding: 0.7rem 0.7rem;
 justify-content: space-between;
 align-items: center;
