--- a/src/pages/Usermanagement/userForm.css
+++ b/src/pages/Usermanagement/userForm.css
@@ -22,6 +22,7 @@
     justify-content: center;
     align-items: center;
     width: 35vw;
+    margin-right: 4rem;
 }
 .formright {
     display: flex;
@@ -42,9 +43,14 @@
 .form-button {
     background-color: #0d77d3;
     color: whitesmoke;
+    width: 120px;
     padding: 10px;
     font-weight: 500;
     align-self: center;
+    margin-right: 2rem;
+    border-radius: 0.5rem;
+    font-size: 16px;
+    font-weight: bold;
 }
 .userFormButton {
     display: flex;
