--- a/src/pages/ProjectDashboard/ProjectDashboard1.css
+++ b/src/pages/ProjectDashboard/ProjectDashboard1.css
@@ -75,7 +75,7 @@
     display: inline-flex;
     justify-content: center;
     align-items: center;
-    padding-right: 6.25rem;
+    margin-right: 6.25rem;
     
 }
 .req-add>p{
@@ -95,6 +95,64 @@ border: 0.962px solid #D0D5DD;
 background: #FFF;
 cursor: pointer;
 }
+
+.project-table-container {
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    border-radius: 5px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    height: 100vh;
+    
+}
+
+.project-table-cancel {
+    margin: 1rem;
+    cursor: pointer;
+}
+
+.project-table {
+    border-collapse: collapse;
+    width: 25vw;
+}
+
+.project-table th {
+    padding: 12px 16px;
+    text-align: left;
+    background-color: #f0f0f0;
+}
+
+.project-table td {
+    padding: 12px 16px;
+    text-align: left;
+}
+
+/* .project-table tr:nth-child(odd) {
+    background-color: #f9f9f9;
+  }
+  
+  .project-table tr:nth-child(even) {
+    background-color: #ffffff;
+  }
+   */
+
+
+.project-table-header {
+    display: flex;
+    justify-content: center;
+    margin: 1rem;
+}
+
+.project-table-header > h1 {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-weight: bold;
+}
+
+.project-table-button {
+    display: flex;
+    justify-content: center;
+}
+
 @media (max-width: 1180px) {
     .req-add > p{
         font-size: smaller;
