--- a/src/pages/Projects/Projects.css
+++ b/src/pages/Projects/Projects.css
@@ -47,6 +47,21 @@
     color: white;
     font-size: 0.8rem;
 }
+
+.create-project{
+height: 2.6rem;
+width: 170px;
+flex-shrink: 0;
+border-radius: 5px;
+background-color: #3575BA;
+
+}
+.create-project>p{
+    color: #FFF;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
 .create-card {
     cursor: pointer;
     transition: all 0.5s ease;
@@ -145,65 +160,3 @@
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 }
 
-.project-table-container {
-    margin-top: 30px;
-    border-radius: 5px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    position: absolute;
-    top: 5%;
-    right: -500px;
-    height: 100vh;
-    width: 25vw;
-    transition: right 1s ease;
-    background-color: white;
-}
-
-.project-table-cancel {
-    margin: 1rem;
-    cursor: pointer;
-}
-
-.project-table {
-    border-collapse: collapse;
-    width: 25vw;
-}
-
-.project-table th {
-    padding: 12px 16px;
-    text-align: left;
-    background-color: #f0f0f0;
-}
-
-.project-table td {
-    padding: 12px 16px;
-    text-align: left;
-}
-
-/* .project-table tr:nth-child(odd) {
-    background-color: #f9f9f9;
-  }
-  
-  .project-table tr:nth-child(even) {
-    background-color: #ffffff;
-  }
-   */
-
-.project-table-container.visible {
-    right: 0;
-}
-
-.project-table-header {
-    display: flex;
-    justify-content: center;
-    margin: 1rem;
-}
-
-.project-table-header > h1 {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-weight: bold;
-}
-
-.project-table-button {
-    display: flex;
-    justify-content: center;
-}
