--- a/src/pages/Projects/Projects.css
+++ b/src/pages/Projects/Projects.css
@@ -56,22 +56,6 @@ border-radius: 5px;
 background-color: #3575BA;
 
 }
-.create-project>p{
-    color: #FFF;
-    font-style: normal;
-    font-weight: 700;
-    line-height: normal;
-}
-.create-card {
-    cursor: pointer;
-    transition: all 0.5s ease;
-    width: 11rem;
-    height: 11rem;
-    margin-right: 130px;
-}
-.create-card:hover {
-    transform: scale(1.2);
-}
 .image-pic {
     width: 9rem;
     height: 7rem;
@@ -83,13 +67,10 @@ background-color: #3575BA;
     border: 1px solid rgba(0, 0, 0, 0.8);
 }
 .searchbar {
-    padding-left: 20px;
-    margin-left: 700px;
     margin-top: 10px;
     display: flex;
-    width: 450px;
     height: 45px;
-    flex-direction: row;
+    justify-content: center;
     align-items: center;
     gap: 10px;
 }
