--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -2,7 +2,7 @@
     display: inline;
     position: fixed;
     left: 0;
-    width: 60px;
+    width: 3.125vw;
     height: 100%;
     background-color: #003059;
     margin: 0;
