--- a/src/components/ProjectHeader/stickyHeader.css
+++ b/src/components/ProjectHeader/stickyHeader.css
@@ -4,43 +4,42 @@
     z-index: 100;
     display: flex;
     height: 4rem;
-    width: 100vw;
+    width: 96.875vw;
     justify-content: space-between;
     align-items: center;
-    margin-left:3rem;
+    background-color: white;
 }
-.project-title{
+.project-title {
     display: inline-block;
+    padding-left: 2vw;
 }
-.project-title>p{
+.project-title > p {
     color: #003059;
     font-family: sans-serif;
     font-size: 36px;
     font-style: normal;
     font-weight: 700;
     line-height: normal;
-
 }
-.title-underline{
+.title-underline {
     height: 0.0625rem;
-    background: #B8B6B6;
-   
+    background: #b8b6b6;
 }
-.project-header-icons{
+.project-header-icons {
     display: inline-flex;
     align-items: center;
     justify-content: center;
     gap: 1.5rem;
-    margin-right:9.5rem;
+    padding-right: 2.4vw;
 }
-.user-icons{
+.user-icons {
     display: flex;
-width: 2.5rem;
-height: 2.5rem;
-padding: 0.7rem 0.7rem;
-justify-content: space-between;
-align-items: center;
-border-radius: 0.48081rem;
-border: 0.962px solid #D0D5DD;
-background: #FFF;
+    width: 2.5rem;
+    height: 2.5rem;
+    padding: 0.7rem 0.7rem;
+    justify-content: space-between;
+    align-items: center;
+    border-radius: 0.48081rem;
+    border: 0.962px solid #d0d5dd;
+    background: #fff;
 }
