--- a/src/pages/Usermanagement/userForm.css
+++ b/src/pages/Usermanagement/userForm.css
@@ -1,10 +1,18 @@
 .form-container {
     display: flex;
-
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
     align-items: top;
-
+    height: 100%;
+    width: 100%;
     padding-top: 50px;
+    overflow: auto;
+}
+.formwrap-container {
+    overflow-y: scroll;
+    overflow: 'hidden';
+    height: 100vh;
 }
 
 .userForm {
@@ -37,16 +45,42 @@
     width: 30vw;
 }
 .title {
-    text-align: center;
+    color: #000;
+    font-family: Poppins;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 500;
+    margin-left: 5vw;
+    height: 25px;
+    font-size: 30px;
+    margin-bottom: 2px;
 }
 .form-button {
-    background-color: #0d77d3;
     color: whitesmoke;
     padding: 10px;
     font-weight: 500;
-    align-self: center;
+    border-radius: 7.693px;
+    border: 0.962px solid #3575ba;
+    background: #3575ba;
+    box-shadow: 0px 0.9615941643714905px 1.923188328742981px 0px
+        rgba(16, 24, 40, 0.05);
+    /* padding: 2px 2px 2px 2px; */
 }
 .userFormButton {
     display: flex;
+    flex-direction: row;
     justify-content: center;
+    align-items: center;
+    gap: 7.693px;
+}
+.title-line {
+    border-bottom: 1px solid #b8b6b6;
+    margin-top: 25px;
+}
+.userform-label-name {
+    color: #000;
+    font-family: Poppins;
+    font-style: normal;
+    /* font-weight: 600; */
+    line-height: normal;
 }
