--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,5 +1,4 @@
-
-  @import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&family=Montserrat:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&family=Montserrat:wght@700&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -7,9 +6,8 @@
 html,
 body,
 #root,
-.index{
-    height: 100%;
-    width:100%;
-    font-family: "DM Sans",sans-serif;
-    
+.index {
+    height: auto;
+    width: auto;
+    font-family: 'DM Sans', sans-serif;
 }
