--- a/src/pages/ProjectDashboard/Requirements/Requirements.css
+++ b/src/pages/ProjectDashboard/Requirements/Requirements.css
@@ -20,8 +20,6 @@
 
 .content-table1 {
     border-collapse: collapse;
-    width: 70vw;
-    height: 44px;
     width: 72.46vw;
     height: 44px;
     border-radius: 5px 5px 0 0;
@@ -69,6 +67,13 @@
     margin-left: 5px;
     margin-bottom: 30px;
     border-radius: 5px;
+}
+.requirements-Details {
+    /* margin-left: 1.75rem;
+    margin-top: 0.5rem; */
+    width: 76.36vw;
+    padding: 1vh 3vw 0vh 0.9vw;
+    overflow-y: scroll;
 }
 .parent-requirement-set {
     float: left;
@@ -126,19 +131,26 @@
     display: flex;
     flex-direction: column;
 }
-
-.test-set-detail {
-    font-family: Poppins;
-    font-weight: 300;
-    font-size: 20px;
-    line-height: 30px;
-    padding: 10px;
-    margin-bottom: 6px;
+.req-set-header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width: 76.36vw;
+    padding: 1vh 0vw 1vh 0vw;
+    position: sticky;
 }
-.hr {
-    border: 1px solid #b8b6b6;
-    transform: rotate(0deg);
-    margin-bottom: 3px;
 
-    width: 100vw;
+.req-set-right {
+    display: flex;
+    gap: 1rem;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding-right: 3vw;
+}
+
+.req-id {
+    text-decoration: underline;
+    color: blue;
 }
