--- a/src/pages/ProjectDashboard/Requirements/Requirements.css
+++ b/src/pages/ProjectDashboard/Requirements/Requirements.css
@@ -8,20 +8,16 @@
 
 .category-title-text {
     background-color: #3575ba;
-    background-color: #3575ba;
     color: white;
     width: 72.46vw;
     height: 44px;
     display: flex;
     align-items: center;
     padding-left: 20px;
-    padding-left: 20px;
 }
 
 .content-table1 {
     border-collapse: collapse;
-    width: 70vw;
-    height: 44px;
     width: 72.46vw;
     height: 44px;
     border-radius: 5px 5px 0 0;
@@ -128,7 +124,6 @@
 }
 
 .test-set-detail {
-    font-family: Poppins;
     font-weight: 300;
     font-size: 20px;
     line-height: 30px;
@@ -141,4 +136,28 @@
     margin-bottom: 3px;
 
     width: 100vw;
+}
+
+.req-set-header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width: 76.36vw;
+    padding: 1vh 0vw 1vh 0vw;
+    position: sticky;
+}
+
+.req-set-right {
+    display: flex;
+    gap: 1rem;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding-right: 3vw;
+}
+
+.req-id {
+    text-decoration: underline;
+    color: blue;
 }
