--- a/src/pages/Homepage/Homepage.css
+++ b/src/pages/Homepage/Homepage.css
@@ -1,6 +1,7 @@
 .homeContainer {
     display: grid;
-
+    overflow-x: hidden;
+    overflow-y: hidden;
     grid-template-columns: 60px auto;
 }
 .routes {
