--- a/src/pages/ProjectDashboard/Requirements/Requirements.css
+++ b/src/pages/ProjectDashboard/Requirements/Requirements.css
@@ -95,7 +95,8 @@
     justify-content: space-between;
     align-items: center;
     width: 76.36vw;
-    padding: 1vh 2.4vw 1vh 1.5vw;
+    padding: 1vh;
+    position: sticky;
 }
 .req-set-header > b {
 }
@@ -105,4 +106,5 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    margin-right: 4rem;
 }
