--- a/src/components/ProjectHeader/stickyHeader.css
+++ b/src/components/ProjectHeader/stickyHeader.css
@@ -1,7 +1,4 @@
 .sticky-header {
-    position: sticky;
-    top: 0;
-    z-index: 100;
     display: flex;
     height: 4rem;
     width: 96.875vw;
@@ -11,7 +8,7 @@
 }
 .project-title {
     display: inline-block;
-    padding-left: 2vw;
+    padding-left: 3vw;
 }
 .project-title > p {
     color: #003059;
@@ -30,7 +27,7 @@
     align-items: center;
     justify-content: center;
     gap: 1rem;
-    margin-right: 4rem;
+    padding-right: 3vw;
 }
 .user-icons {
     display: flex;
