--- a/src/pages/ProjectDashboard/ProjectDashboard1.css
+++ b/src/pages/ProjectDashboard/ProjectDashboard1.css
@@ -72,7 +72,7 @@
     display: inline-flex;
     justify-content: center;
     align-items: center;
-    margin-right: 4rem;
+    padding-right: 2.75vw;
 }
 .req-add > p {
     font-size: medium;
